--- a/src/app/main-conten/projects/projects.component.scss
+++ b/src/app/main-conten/projects/projects.component.scss
@@ -123,3 +123,24 @@ h5{
     margin: 3rem 0;
   }
 }
+
+@media (max-width: 900px) {
+  .project-container {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-container {
+    max-width: 100%;
+    width: 100%;
+  }
+
+  .text-container-project {
+    width: 100%;
+  }
+
+  .links {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
